Agregando google analitycs

--- a/index.html
+++ b/index.html
@@ -35,7 +35,17 @@
   * License: https://bootstrapmade.com/license/
   ======================================================== -->
 </head>
+  
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-ERNPFTRCM1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-ERNPFTRCM1');
+</script>
+  
 <style>
   /* Contenedor del círculo */
 
